--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f70da631",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,397 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hii\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4024 entries, 0 to 4023\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Patient_ID              4024 non-null   object \n",
+      " 1   Month_of_Birth          4024 non-null   int64  \n",
+      " 2   Age                     4015 non-null   float64\n",
+      " 3   Sex                     4020 non-null   object \n",
+      " 4   Occupation              43 non-null     object \n",
+      " 5   T_Stage                 4024 non-null   object \n",
+      " 6   N_Stage                 4024 non-null   object \n",
+      " 7   6th_Stage               4024 non-null   object \n",
+      " 8   Differentiated          4024 non-null   object \n",
+      " 9   Grade                   4024 non-null   int64  \n",
+      " 10  A_Stage                 4024 non-null   object \n",
+      " 11  Tumor_Size              4021 non-null   float64\n",
+      " 12  Estrogen_Status         4024 non-null   object \n",
+      " 13  Progesterone_Status     4024 non-null   object \n",
+      " 14  Regional_Node_Examined  4023 non-null   float64\n",
+      " 15  Reginol_Node_Positive   4024 non-null   int64  \n",
+      " 16  Survival_Months         4024 non-null   int64  \n",
+      " 17  Mortality_Status        4024 non-null   object \n",
+      "dtypes: float64(3), int64(4), object(11)\n",
+      "memory usage: 566.0+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Patient_ID</th>\n",
+       "      <th>Month_of_Birth</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Occupation</th>\n",
+       "      <th>T_Stage</th>\n",
+       "      <th>N_Stage</th>\n",
+       "      <th>6th_Stage</th>\n",
+       "      <th>Differentiated</th>\n",
+       "      <th>Grade</th>\n",
+       "      <th>A_Stage</th>\n",
+       "      <th>Tumor_Size</th>\n",
+       "      <th>Estrogen_Status</th>\n",
+       "      <th>Progesterone_Status</th>\n",
+       "      <th>Regional_Node_Examined</th>\n",
+       "      <th>Reginol_Node_Positive</th>\n",
+       "      <th>Survival_Months</th>\n",
+       "      <th>Mortality_Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4024</td>\n",
+       "      <td>4024.000000</td>\n",
+       "      <td>4015.000000</td>\n",
+       "      <td>4020</td>\n",
+       "      <td>43</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>4024.000000</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>4021.000000</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>4023.000000</td>\n",
+       "      <td>4024.000000</td>\n",
+       "      <td>4024.000000</td>\n",
+       "      <td>4024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>4024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>A0012</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>House Person</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>N1</td>\n",
+       "      <td>IIA</td>\n",
+       "      <td>Moderately differentiated</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Regional</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4001</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1786</td>\n",
+       "      <td>2732</td>\n",
+       "      <td>1305</td>\n",
+       "      <td>2351</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3932</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3755</td>\n",
+       "      <td>3326</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.481362</td>\n",
+       "      <td>54.107098</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.150596</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.419299</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.373602</td>\n",
+       "      <td>4.158052</td>\n",
+       "      <td>71.472167</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.475442</td>\n",
+       "      <td>11.715528</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.638234</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.161080</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.129293</td>\n",
+       "      <td>5.109331</td>\n",
+       "      <td>25.361855</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-50.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-75.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>502.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>760.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Patient_ID  Month_of_Birth          Age     Sex    Occupation T_Stage  \\\n",
+       "count        4024     4024.000000  4015.000000    4020            43    4024   \n",
+       "unique       4024             NaN          NaN       2            40       4   \n",
+       "top         A0012             NaN          NaN  Female  House Person      T2   \n",
+       "freq            1             NaN          NaN    4001             2    1786   \n",
+       "mean          NaN        6.481362    54.107098     NaN           NaN     NaN   \n",
+       "std           NaN        3.475442    11.715528     NaN           NaN     NaN   \n",
+       "min           NaN        1.000000   -50.000000     NaN           NaN     NaN   \n",
+       "25%           NaN        3.000000    47.000000     NaN           NaN     NaN   \n",
+       "50%           NaN        6.000000    54.000000     NaN           NaN     NaN   \n",
+       "75%           NaN       10.000000    61.000000     NaN           NaN     NaN   \n",
+       "max           NaN       12.000000   502.000000     NaN           NaN     NaN   \n",
+       "\n",
+       "       N_Stage 6th_Stage             Differentiated        Grade   A_Stage  \\\n",
+       "count     4024      4024                       4024  4024.000000      4024   \n",
+       "unique       3         5                          4          NaN         2   \n",
+       "top         N1       IIA  Moderately differentiated          NaN  Regional   \n",
+       "freq      2732      1305                       2351          NaN      3932   \n",
+       "mean       NaN       NaN                        NaN     2.150596       NaN   \n",
+       "std        NaN       NaN                        NaN     0.638234       NaN   \n",
+       "min        NaN       NaN                        NaN     1.000000       NaN   \n",
+       "25%        NaN       NaN                        NaN     2.000000       NaN   \n",
+       "50%        NaN       NaN                        NaN     2.000000       NaN   \n",
+       "75%        NaN       NaN                        NaN     3.000000       NaN   \n",
+       "max        NaN       NaN                        NaN     4.000000       NaN   \n",
+       "\n",
+       "         Tumor_Size Estrogen_Status Progesterone_Status  \\\n",
+       "count   4021.000000            4024                4024   \n",
+       "unique          NaN               2                   2   \n",
+       "top             NaN        Positive            Positive   \n",
+       "freq            NaN            3755                3326   \n",
+       "mean      30.419299             NaN                 NaN   \n",
+       "std       21.161080             NaN                 NaN   \n",
+       "min      -75.000000             NaN                 NaN   \n",
+       "25%       16.000000             NaN                 NaN   \n",
+       "50%       25.000000             NaN                 NaN   \n",
+       "75%       38.000000             NaN                 NaN   \n",
+       "max      140.000000             NaN                 NaN   \n",
+       "\n",
+       "        Regional_Node_Examined  Reginol_Node_Positive  Survival_Months  \\\n",
+       "count              4023.000000            4024.000000      4024.000000   \n",
+       "unique                     NaN                    NaN              NaN   \n",
+       "top                        NaN                    NaN              NaN   \n",
+       "freq                       NaN                    NaN              NaN   \n",
+       "mean                 14.373602               4.158052        71.472167   \n",
+       "std                   8.129293               5.109331        25.361855   \n",
+       "min                   1.000000               1.000000         1.000000   \n",
+       "25%                   9.000000               1.000000        56.000000   \n",
+       "50%                  14.000000               2.000000        73.000000   \n",
+       "75%                  19.000000               5.000000        90.000000   \n",
+       "max                  61.000000              46.000000       760.000000   \n",
+       "\n",
+       "       Mortality_Status  \n",
+       "count              4024  \n",
+       "unique                7  \n",
+       "top               Alive  \n",
+       "freq               3399  \n",
+       "mean                NaN  \n",
+       "std                 NaN  \n",
+       "min                 NaN  \n",
+       "25%                 NaN  \n",
+       "50%                 NaN  \n",
+       "75%                 NaN  \n",
+       "max                 NaN  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"hii\")"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# load the dataset\n",
+    "data_set = pd.read_csv('./dataset-breast-cancer.csv')\n",
+    "\n",
+    "# preview the dataset\n",
+    "data_set.head()\n",
+    "\n",
+    "# dataset information\n",
+    "data_set.info()\n",
+    "\n",
+    "# summary of data\n",
+    "data_set.describe(include='all')\n"
    ]
   }
  ],
@@ -26,7 +411,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
