feat: update breast_cancer notebook with execution count and dataset shape

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "f70da631",
    "metadata": {},
    "outputs": [
@@ -35,24 +35,7 @@
       " 17  Mortality_Status        4024 non-null   object \n",
       "dtypes: float64(3), int64(4), object(11)\n",
       "memory usage: 566.0+ KB\n",
-      "Mortality_Status\n",
-      "Alive    3399\n",
-      "Dead      598\n",
-      "DEAD       10\n",
-      "dead        8\n",
-      "ALIVE       5\n",
-      "alive       3\n",
-      "ALive       1\n",
-      "Name: count, dtype: int64\n",
-      "count    4024.000000\n",
-      "mean       71.472167\n",
-      "std        25.361855\n",
-      "min         1.000000\n",
-      "25%        56.000000\n",
-      "50%        73.000000\n",
-      "75%        90.000000\n",
-      "max       760.000000\n",
-      "Name: Survival_Months, dtype: float64\n"
+      "Dataset Shape: (4024, 18)\n"
      ]
     }
    ],
@@ -71,6 +54,9 @@
     "\n",
     "# summary of data\n",
     "data_set.describe(include='all')\n",
+    "\n",
+    "# dimentions of the dataset\n",
+    "print(\"Dataset Shape:\", data_set.shape)\n",
     "\n",
     "\n",
     "\n"
@@ -163,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "id": "ad3d3e12",
    "metadata": {},
    "outputs": [
