fix: update regression dataset filtering and column dropping

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -127,18 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "id": "d9f5606d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "regression_data_set = data_set[data_set['Mortality_Status'] == 1]  # Filter only dead patients\n",
+    "regression_data_set = data_set[data_set['Mortality_Status'] == 'Dead']  # Filter only dead patients\n",
     "regression_data_set = regression_data_set.drop(columns=['Patient_ID'])  # Drop irrelevant ID\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "id": "a4302bf2",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "ad3d3e12",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
      "output_type": "stream",
      "text": [
       "Classification Dataset Shape: (4024, 16)\n",
-      "Regression Dataset Shape: (0, 17)\n"
+      "Regression Dataset Shape: (598, 17)\n"
      ]
     }
    ],
