feat: clean and split regression dataset into two files

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -127,29 +127,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "d9f5606d",
    "metadata": {},
    "outputs": [],
    "source": [
     "regression_data_set = data_set[data_set['Mortality_Status'] == 'Dead']  # Filter only dead patients\n",
-    "regression_data_set = regression_data_set.drop(columns=['Patient_ID'])  # Drop irrelevant ID\n"
+    "regression_data_set2 = data_set[data_set['Mortality_Status'] == 'Alive']  # Filter only alive patients\n",
+    "\n",
+    "regression_data_set = regression_data_set.drop(columns=['Patient_ID'])  # Drop irrelevant ID\n",
+    "regression_data_set2 = regression_data_set2.drop(columns=['Patient_ID'])  # Drop irrelevant ID\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "a4302bf2",
    "metadata": {},
    "outputs": [],
    "source": [
     "classification_data_set.to_csv('classification_data_cleaned.csv', index=False)\n",
-    "regression_data_set.to_csv('regression_data_cleaned.csv', index=False)\n"
+    "regression_data_set.to_csv('regression_data_cleaned.csv', index=False)\n",
+    "regression_data_set2.to_csv('regression_data_cleaned2.csv', index=False)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "ad3d3e12",
    "metadata": {},
    "outputs": [
@@ -158,13 +165,16 @@
      "output_type": "stream",
      "text": [
       "Classification Dataset Shape: (4024, 16)\n",
-      "Regression Dataset Shape: (598, 17)\n"
+      "Regression Dataset Shape (Dead): (598, 17)\n",
+      "Regression Dataset Shape (Alive): (3399, 17)\n"
      ]
     }
    ],
    "source": [
     "print(\"Classification Dataset Shape:\", classification_data_set.shape)\n",
-    "print(\"Regression Dataset Shape:\", regression_data_set.shape)\n"
+    "print(\"Regression Dataset Shape (Dead):\", regression_data_set.shape)\n",
+    "print(\"Regression Dataset Shape (Alive):\", regression_data_set2.shape)\n",
+    "\n"
    ]
   }
  ],
