fix: update execution counts and mortality status in breast_cancer.ipynb

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 84,
    "id": "4ab7913b",
    "metadata": {},
    "outputs": [
@@ -73,13 +73,8 @@
      "output_type": "stream",
      "text": [
       "Mortality_Status\n",
-      "Alive    3399\n",
-      "Dead      598\n",
-      "DEAD       10\n",
-      "dead        8\n",
-      "ALIVE       5\n",
-      "alive       3\n",
-      "ALive       1\n",
+      "Alive    3408\n",
+      "Dead      616\n",
       "Name: count, dtype: int64\n",
       "count    4024.000000\n",
       "mean       71.472167\n",
@@ -97,7 +92,9 @@
    ],
    "source": [
     "# view unique values in target variables\n",
+    "data_set['Mortality_Status'] = data_set['Mortality_Status'].str.strip().str.capitalize()\n",
     "print(data_set['Mortality_Status'].value_counts())\n",
+    "\n",
     "print(data_set['Survival_Months'].describe())\n",
     "\n",
     "\n",
@@ -116,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 86,
    "id": "dc3c207d",
    "metadata": {},
    "outputs": [],
@@ -127,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 87,
    "id": "d9f5606d",
    "metadata": {},
    "outputs": [],
@@ -143,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 88,
    "id": "a4302bf2",
    "metadata": {},
    "outputs": [],
@@ -156,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 89,
    "id": "ad3d3e12",
    "metadata": {},
    "outputs": [
@@ -165,8 +162,8 @@
      "output_type": "stream",
      "text": [
       "Classification Dataset Shape: (4024, 16)\n",
-      "Regression Dataset Shape (Dead): (598, 17)\n",
-      "Regression Dataset Shape (Alive): (3399, 17)\n"
+      "Regression Dataset Shape (Dead): (616, 17)\n",
+      "Regression Dataset Shape (Alive): (3408, 17)\n"
      ]
     }
    ],
