encoding the data

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 202,
    "id": "f70da631",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 203,
    "id": "4ab7913b",
    "metadata": {},
    "outputs": [
@@ -73,8 +73,13 @@
      "output_type": "stream",
      "text": [
       "Mortality_Status\n",
-      "Alive    3408\n",
-      "Dead      616\n",
+      "Alive    3399\n",
+      "Dead      598\n",
+      "DEAD       10\n",
+      "dead        8\n",
+      "ALIVE       5\n",
+      "alive       3\n",
+      "ALive       1\n",
       "Name: count, dtype: int64\n",
       "count    4024.000000\n",
       "mean       71.472167\n",
@@ -85,93 +90,256 @@
       "75%        90.000000\n",
       "max       760.000000\n",
       "Name: Survival_Months, dtype: float64\n",
-      "['Patient_ID', 'Month_of_Birth', 'Age', 'Sex', 'Occupation', 'T_Stage', 'N_Stage', '6th_Stage', 'Differentiated', 'Grade', 'A_Stage', 'Tumor_Size', 'Estrogen_Status', 'Progesterone_Status', 'Regional_Node_Examined', 'Reginol_Node_Positive', 'Survival_Months', 'Mortality_Status']\n",
       "['Patient_ID', 'Month_of_Birth', 'Age', 'Sex', 'Occupation', 'T_Stage', 'N_Stage', '6th_Stage', 'Differentiated', 'Grade', 'A_Stage', 'Tumor_Size', 'Estrogen_Status', 'Progesterone_Status', 'Regional_Node_Examined', 'Reginol_Node_Positive', 'Survival_Months', 'Mortality_Status']\n"
      ]
     }
    ],
    "source": [
     "# view unique values in target variables\n",
-    "data_set['Mortality_Status'] = data_set['Mortality_Status'].str.strip().str.capitalize()\n",
     "print(data_set['Mortality_Status'].value_counts())\n",
     "\n",
     "print(data_set['Survival_Months'].describe())\n",
     "\n",
-    "\n",
-    "# Reload the original data\n",
-    "\n",
     "print(data_set.columns.tolist())\n",
     "\n",
-    "# Define the categorical columns (make sure they actually exist in the data)\n",
-    "categorical_cols = ['Sex', 'T Stage', 'N Stage', 'Estrogen Status', 'Progesterone Status']\n",
     "\n",
-    "# Check column names just in case\n",
-    "print(data_set.columns.tolist())\n",
     "\n",
-    "# Then apply one-hot encoding\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 204,
+   "id": "20097974",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Patient_ID                 object\n",
+       "Month_of_Birth              int64\n",
+       "Age                       float64\n",
+       "Sex                        object\n",
+       "Occupation                 object\n",
+       "T_Stage                    object\n",
+       "N_Stage                    object\n",
+       "6th_Stage                  object\n",
+       "Differentiated             object\n",
+       "Grade                       int64\n",
+       "A_Stage                    object\n",
+       "Tumor_Size                float64\n",
+       "Estrogen_Status            object\n",
+       "Progesterone_Status        object\n",
+       "Regional_Node_Examined    float64\n",
+       "Reginol_Node_Positive       int64\n",
+       "Survival_Months             int64\n",
+       "Mortality_Status           object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# identify categorial columns\n",
+    "data_set.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "d4e70574",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean and standardize casing\n",
+    "data_set['Mortality_Status'] = data_set['Mortality_Status'].str.strip().str.capitalize()\n",
+    "\n",
+    "# encode: Alive = 0, Dead = 1\n",
+    "data_set['Mortality_Status'] = data_set['Mortality_Status'].map({'Alive': 0, 'Dead': 1})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "id": "ae331dcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_columns = ['Sex', 'T_Stage', 'N_Stage', 'Estrogen_Status', 'Progesterone_Status']\n",
+    "\n",
+    "# One-hot encode (drop_first=True avoids multicollinearity)\n",
+    "data_set = pd.get_dummies(data_set, columns=categorical_columns, drop_first=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "id": "433bc170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Patient_ID                       object\n",
+       "Month_of_Birth                    int64\n",
+       "Age                             float64\n",
+       "Occupation                       object\n",
+       "6th_Stage                        object\n",
+       "Differentiated                   object\n",
+       "Grade                             int64\n",
+       "A_Stage                          object\n",
+       "Tumor_Size                      float64\n",
+       "Regional_Node_Examined          float64\n",
+       "Reginol_Node_Positive             int64\n",
+       "Survival_Months                   int64\n",
+       "Mortality_Status                  int64\n",
+       "Sex_Female                         bool\n",
+       "T_Stage_T2                         bool\n",
+       "T_Stage_T3                         bool\n",
+       "T_Stage_T4                         bool\n",
+       "N_Stage_N2                         bool\n",
+       "N_Stage_N3                         bool\n",
+       "Estrogen_Status_Positive           bool\n",
+       "Progesterone_Status_Positive       bool\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_set.head()\n",
+    "data_set.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "0b52663a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_set = pd.get_dummies(data_set, columns=['Occupation'], drop_first=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "03f04b9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Patient_ID                       object\n",
+       "Month_of_Birth                    int64\n",
+       "Age                             float64\n",
+       "6th_Stage                        object\n",
+       "Differentiated                   object\n",
+       "Grade                             int64\n",
+       "A_Stage                          object\n",
+       "Tumor_Size                      float64\n",
+       "Regional_Node_Examined          float64\n",
+       "Reginol_Node_Positive             int64\n",
+       "Survival_Months                   int64\n",
+       "Mortality_Status                  int64\n",
+       "Sex_Female                         bool\n",
+       "T_Stage_T2                         bool\n",
+       "T_Stage_T3                         bool\n",
+       "T_Stage_T4                         bool\n",
+       "N_Stage_N2                         bool\n",
+       "N_Stage_N3                         bool\n",
+       "Estrogen_Status_Positive           bool\n",
+       "Progesterone_Status_Positive       bool\n",
+       "Occupation_Agriculture             bool\n",
+       "Occupation_Arts                    bool\n",
+       "Occupation_Business                bool\n",
+       "Occupation_Cleaning                bool\n",
+       "Occupation_Construction            bool\n",
+       "Occupation_Consultancy             bool\n",
+       "Occupation_Design                  bool\n",
+       "Occupation_Development             bool\n",
+       "Occupation_Driving                 bool\n",
+       "Occupation_Engineering             bool\n",
+       "Occupation_Entertainment           bool\n",
+       "Occupation_Finance                 bool\n",
+       "Occupation_Healthcare              bool\n",
+       "Occupation_Hospitality             bool\n",
+       "Occupation_House Person            bool\n",
+       "Occupation_Human Resources         bool\n",
+       "Occupation_Legal                   bool\n",
+       "Occupation_Leisure                 bool\n",
+       "Occupation_Maintenance             bool\n",
+       "Occupation_Management              bool\n",
+       "Occupation_Manufacturing           bool\n",
+       "Occupation_Marketing               bool\n",
+       "Occupation_Medical                 bool\n",
+       "Occupation_Military                bool\n",
+       "Occupation_Multimedia              bool\n",
+       "Occupation_Photography             bool\n",
+       "Occupation_Planning                bool\n",
+       "Occupation_Politics                bool\n",
+       "Occupation_Public                  bool\n",
+       "Occupation_Reporting               bool\n",
+       "Occupation_Research                bool\n",
+       "Occupation_Sales                   bool\n",
+       "Occupation_Scoial work             bool\n",
+       "Occupation_Sports                  bool\n",
+       "Occupation_Teaching                bool\n",
+       "Occupation_Technology              bool\n",
+       "Occupation_Trading                 bool\n",
+       "Occupation_Training                bool\n",
+       "Occupation_Travel                  bool\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_set.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
    "id": "dc3c207d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classification_data_set = data_set.drop(columns=['Patient_ID', 'Survival_Months'])  # Drop irrelevant for classification\n",
-    "classification_data_set = classification_data_set.dropna(subset=['Mortality_Status'])  # Ensure target is available\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "d9f5606d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regression_data_set = data_set[data_set['Mortality_Status'] == 'Dead']  # Filter only dead patients\n",
-    "regression_data_set2 = data_set[data_set['Mortality_Status'] == 'Alive']  # Filter only alive patients\n",
-    "\n",
-    "regression_data_set = regression_data_set.drop(columns=['Patient_ID'])  # Drop irrelevant ID\n",
-    "regression_data_set2 = regression_data_set2.drop(columns=['Patient_ID'])  # Drop irrelevant ID\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "a4302bf2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classification_data_set.to_csv('classification_data_cleaned.csv', index=False)\n",
-    "regression_data_set.to_csv('regression_data_cleaned.csv', index=False)\n",
-    "regression_data_set2.to_csv('regression_data_cleaned2.csv', index=False)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "ad3d3e12",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classification Dataset Shape: (4024, 16)\n",
-      "Regression Dataset Shape (Dead): (616, 17)\n",
-      "Regression Dataset Shape (Alive): (3408, 17)\n"
+      "Classification Dataset Shape: (4024, 57)\n",
+      "Regression Dataset Shape (Dead): (616, 58)\n",
+      "Regression Dataset Shape (Alive): (3408, 58)\n"
      ]
     }
    ],
    "source": [
+    "# Drop irrelevant columns for classification and handle missing target\n",
+    "classification_data_set = data_set.drop(columns=['Patient_ID', 'Survival_Months']).dropna(subset=['Mortality_Status'])\n",
+    "\n",
+    "# Filter the data for regression tasks (dead and alive patients)\n",
+    "regression_data_set_dead = data_set[data_set['Mortality_Status'] == 1].drop(columns=['Patient_ID'])\n",
+    "regression_data_set_alive = data_set[data_set['Mortality_Status'] == 0].drop(columns=['Patient_ID'])\n",
+    "\n",
+    "# Save cleaned datasets to CSV\n",
+    "classification_data_set.to_csv('classification_data_cleaned.csv', index=False)\n",
+    "regression_data_set_dead.to_csv('regression_data_cleaned_dead.csv', index=False)\n",
+    "regression_data_set_alive.to_csv('regression_data_cleaned_alive.csv', index=False)\n",
+    "\n",
+    "# Print dataset shapes for confirmation\n",
     "print(\"Classification Dataset Shape:\", classification_data_set.shape)\n",
-    "print(\"Regression Dataset Shape (Dead):\", regression_data_set.shape)\n",
-    "print(\"Regression Dataset Shape (Alive):\", regression_data_set2.shape)\n",
-    "\n"
+    "print(\"Regression Dataset Shape (Dead):\", regression_data_set_dead.shape)\n",
+    "print(\"Regression Dataset Shape (Alive):\", regression_data_set_alive.shape)\n"
    ]
   }
  ],
